--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>God Of Destruction</title>
-  <script src="https://code.jquery.com/jquery.js"></script>
+  <link rel="stylesheet" type="text/css" href="/library/particleEffect/css/particles.css" />
+  <link rel="stylesheet" type="text/css" href="/library/particleEffect/css/base.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
   {{{ body }}}
+  <script src="/library/particleEffect/js/anime.min.js"></script>
+  <script src="/library/particleEffect/js/particles.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="/js/character.js"></script>
 </body>
+
 </html>
