--- a/views/partials/characters/character-buttons.handlebars
+++ b/views/partials/characters/character-buttons.handlebars
@@ -1,4 +1,4 @@
 
-<div class="grid__item">
-    <button class="particles-button delete" data-destroy={{this.destroyed}} data-id={{this.id}}>{{this.name}}</button>
+<div class="grid__item theme-1 rounded">
+    <button class="particles-button delete alive" data-destroy={{this.destroyed}} data-id={{this.id}}>{{this.name}}</button>
 </div>
