--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,9 @@
   <link rel="stylesheet" type="text/css" href="/library/particleEffect/css/base.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/css/style.css" />
+
 </head>
 
 <body>
@@ -16,6 +19,8 @@
   <script src="/library/particleEffect/js/particles.js"></script>
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/character.js"></script>
+  <script src="/js/button.js"></script>
+
 </body>
 
 </html>
